--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         body {
-            background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url('/Images/sewage-treatment-plant-4560229.jpg');
+            background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url('Images/sewage-treatment-plant-4560229.jpg');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -74,81 +74,81 @@
     </header>
     <main>
 
-        <a href="/BOD.html" target="_blank">
+        <a href="BOD.html" target="_blank">
             <article>BOD</article>
         </a>
 
 
-        <a href="/BOD-seeded.html" target="_blank">
+        <a href="BOD-seeded.html" target="_blank">
             <article>BOD-seeded</article>
         </a>
 
 
-        <a href="/TS.html" target="_blank">
+        <a href="TS.html" target="_blank">
             <article>TS</article>
         </a>
 
 
-        <a href="/TSS.html" target="_blank">
+        <a href="TSS.html" target="_blank">
             <article>TSS</article>
         </a>
 
 
-        <a href="/TVS.html" target="_blank">
+        <a href="TVS.html" target="_blank">
             <article>TVS</article>
         </a>
 
 
-        <a href="/mu-as-mumax.html" target="_blank">
+        <a href="mu-as-mumax.html" target="_blank">
             <article>&#956; as &#956;max</article>
         </a>
 
-        <a href="/COD.html" target="_blank">
+        <a href="COD.html" target="_blank">
             <article>COD</article>
         </a>
 
 
-        <a href="/HRT.html" target="_blank">
+        <a href="HRT.html" target="_blank">
             <article>HRT</article>
         </a>
 
 
-        <a href="/Sludge-age.html" target="_blank">
+        <a href="Sludge-age.html" target="_blank">
             <article>Sludge Age</article>
         </a>
 
 
-        <a href="/Doubling-time.html" target="_blank">
+        <a href="Doubling-time.html" target="_blank">
             <article>Doubling time</article>
         </a>
 
 
-        <a href="/Cell-wash-out-time.html" target="_blank">
+        <a href="Cell-wash-out-time.html" target="_blank">
             <article>Cell Wash Out Time</article>
         </a>
 
 
-        <a href="/F-M-ratio.html" target="_blank">
+        <a href="F-M-ratio.html" target="_blank">
             <article>F/M Ratio</article>
         </a>
 
 
-        <a href="/Substrate-utilisation-rate.html" target="_blank">
+        <a href="Substrate-utilisation-rate.html" target="_blank">
             <article>Substrate Utilisation Rate</article>
         </a>
 
 
-        <a href="/Volume-of-reactor.html" target="_blank">
+        <a href="Volume-of-reactor.html" target="_blank">
             <article>Volume Of Reactor</article>
         </a>
 
 
-        <a href="/Trickling-filter.html" target="_blank">
+        <a href="Trickling-filter.html" target="_blank">
             <article>Trickling Filter</article>
         </a>
 
 
-        <a href="/BOD-removal-calculator.html" target="_blank">
+        <a href="BOD-removal-calculator.html" target="_blank">
             <article>RBC BOD Removal</article>
         </a>
 
