--- a/Cell-wash-out-time.html
+++ b/Cell-wash-out-time.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cell Wash-Out Time Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Cell Wash-Out Time Calculator</h1>
+    <header>Cell Wash-Out Time Calculator</header>
+    <main class="container">
         <form id="washOutTimeForm">
-            <label for="concentrationAtTimeT">Bacterial Concentration at Time t:</label>
-            <input type="number" id="concentrationAtTimeT" step="0.01" required><br><br>
+            <article>
+                <label for="concentrationAtTimeT">Bacterial Concentration at Time t:</label>
+                <input type="number" id="concentrationAtTimeT" step="0.01" required>
+            </article>
+            <article>
+                <label for="concentrationAtTimeZero">Bacterial Concentration at Time t = 0:</label>
+                <input type="number" id="concentrationAtTimeZero" step="0.01" required>
+            </article>
 
+            <article>
+                <label for="kd">Endogenous Respiration Coefficient (d^-1):</label>
+                <input type="number" id="kd" step="0.01" required>
+            </article>
 
-            <label for="concentrationAtTimeZero">Bacterial Concentration at Time t = 0:</label>
-            <input type="number" id="concentrationAtTimeZero" step="0.01" required><br><br>
-
-
-            <label for="kd">Endogenous Respiration Coefficient (d^-1):</label>
-            <input type="number" id="kd" step="0.01" required><br><br>
-
-
-            <label for="um">Specific Growth Rate (d^-1):</label>
-            <input type="number" id="um" step="0.01" required><br><br>
+            <article>
+                <label for="um">Specific Growth Rate (d^-1):</label>
+                <input type="number" id="um" step="0.01" required>
+            </article>
 
 
             <button type="button" onclick="calculateWashOutTime()">Calculate Cell Wash-Out Time</button><br><br>
 
-
-            <div id="result"></div>
+            <article>
+                <div class="result" id="result"></div>
+            </article>
         </form>
-    </div>
+    </main>
 
 
     <script>
@@ -65,4 +67,5 @@
         }
     </script>
 </body>
+
 </html>
