--- a/Doubling-time.html
+++ b/Doubling-time.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doubling Time Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Doubling Time Calculator</h1>
+    <main class="container">
+        <header>Doubling Time Calculator</header>
         <form id="doublingTimeForm">
-            <label for="kd">Endogenous Respiration Coefficient (d^-1):</label>
-            <input type="number" id="kd" step="0.01" required><br><br>
+            <article>
+                <label for="kd">Endogenous Respiration Coefficient (d^-1):</label>
+                <input type="number" id="kd" step="0.01" required>
+            </article>
 
-
-            <label for="um">Specific Growth Rate (d^-1):</label>
-            <input type="number" id="um" step="0.01" required><br><br>
+            <article>
+                <label for="um">Specific Growth Rate (d^-1):</label>
+                <input type="number" id="um" step="0.01" required>
+            </article>
 
 
             <button type="button" onclick="calculateDoublingTime()">Calculate Doubling Time</button><br><br>
 
-
-            <div id="result"></div>
+            <article>
+                <div class="result" id="result"></div>
+            </article>
         </form>
-    </div>
+    </main>
 
 
     <script>
@@ -55,4 +56,5 @@
         }
     </script>
 </body>
+
 </html>
