--- a/F-M-ratio.html
+++ b/F-M-ratio.html
@@ -1,47 +1,49 @@
-F/M ratio 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F/M Ratio Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>F/M Ratio Calculator</h1>
+    <header>F/M Ratio Calculator</header>
+    <main class="container">
         <form id="fmRatioForm">
-            <label for="influentFlow">Influent Flow (Q, m³/d):</label>
-            <input type="number" id="influentFlow" step="0.01" required><br><br>
+            <article>
+                <label for="influentFlow">Influent Flow (Q, m³/d):</label>
+                <input type="number" id="influentFlow" step="0.01" required>
+            </article>
 
+            <article>
+                <label for="influentBODs">Influent BODs Concentration (So, g/m³):</label>
+                <input type="number" id="influentBODs" step="0.01" required>
+            </article>
 
-            <label for="influentBODs">Influent BODs Concentration (So, g/m³):</label>
-            <input type="number" id="influentBODs" step="0.01" required><br><br>
+            <article>
+                <label for="reactorVolume">Reactor Volume (V, m³):</label>
+                <input type="number" id="reactorVolume" step="0.01" required>
+            </article>
 
-
-            <label for="reactorVolume">Reactor Volume (V, m³):</label>
-            <input type="number" id="reactorVolume" step="0.01" required><br><br>
-
-
-            <label for="volatileSuspendedSolids">Volatile Suspended Solids Concentration (Xv, g/m³):</label>
-            <input type="number" id="volatileSuspendedSolids" step="0.01" required><br><br>
+            <article>
+                <label for="volatileSuspendedSolids">Volatile Suspended Solids Concentration (Xv, g/m³):</label>
+                <input type="number" id="volatileSuspendedSolids" step="0.01" required>
+            </article>
 
 
             <button type="button" onclick="calculateFMRatio()">Calculate F/M Ratio</button><br><br>
 
-
-            <div id="result"></div>
+            <article>
+                <div class="result" id="result"></div>
+            </article>
         </form>
-    </div>
+    </main>
 
 
     <script>
@@ -67,4 +69,5 @@ F/M ratio
         }
     </script>
 </body>
+
 </html>
