--- a/Substrate-utilisation-rate.html
+++ b/Substrate-utilisation-rate.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Substrate Utilisation Rate (U) Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Substrate Utilisation Rate (U) Calculator</h1>
+    <header>Substrate Utilisation Rate (U) Calculator</header>
+    <main class="container">
         <form id="substrateUtilizationForm">
-            <label for="influentFlow">Influent Flow (Q, m³/d):</label>
-            <input type="number" id="influentFlow" step="0.01" required><br><br>
+            <article>
+                <label for="influentFlow">Influent Flow (Q, m³/d):</label>
+                <input type="number" id="influentFlow" step="0.01" required>
+            </article>
+
+            <article>
+                <label for="influentBODs">Influent BODs Concentration (So, g/m³):</label>
+                <input type="number" id="influentBODs" step="0.01" required>
+            </article>
+
+            <article>
+                <label for="solubleEffluentBOD">Soluble Effluent BOD Concentration (S, g/m³):</label>
+                <input type="number" id="solubleEffluentBOD" step="0.01" required>
+            </article>
+
+            <article>
+                <label for="reactorVolume">Reactor Volume (V, m³):</label>
+                <input type="number" id="reactorVolume" step="0.01" required>
+            </article>
+
+            <article>
+                <label for="volatileSuspendedSolids">Volatile Suspended Solids Concentration (Xv, g/m³):</label>
+                <input type="number" id="volatileSuspendedSolids" step="0.01" required>
+            </article>
 
 
-            <label for="influentBODs">Influent BODs Concentration (So, g/m³):</label>
-            <input type="number" id="influentBODs" step="0.01" required><br><br>
+            <button type="button" onclick="calculateSubstrateUtilizationRate()">Calculate Substrate Utilisation Rate
+                (U)</button><br><br>
 
-
-            <label for="solubleEffluentBOD">Soluble Effluent BOD Concentration (S, g/m³):</label>
-            <input type="number" id="solubleEffluentBOD" step="0.01" required><br><br>
-
-
-            <label for="reactorVolume">Reactor Volume (V, m³):</label>
-            <input type="number" id="reactorVolume" step="0.01" required><br><br>
-
-
-            <label for="volatileSuspendedSolids">Volatile Suspended Solids Concentration (Xv, g/m³):</label>
-            <input type="number" id="volatileSuspendedSolids" step="0.01" required><br><br>
-
-
-            <button type="button" onclick="calculateSubstrateUtilizationRate()">Calculate Substrate Utilisation Rate (U)</button><br><br>
-
-
-            <div id="result"></div>
+            <article>
+                <div class="result" id="result"></div>
+            </article>
         </form>
-    </div>
+    </main>
 
 
     <script>
@@ -71,4 +76,5 @@
         }
     </script>
 </body>
+
 </html>
