--- a/TSS.html
+++ b/TSS.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Total Suspended Solids Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Total Suspended Solids Calculator</h1>
+    <header>Total Suspended Solids Calculator</header>
+    <main class="container">
         <form id="tssForm">
-            <label for="emptyFilterWeight">Weight of Empty Filter Paper (mg):</label>
-            <input type="number" id="emptyFilterWeight" step="0.01" required><br><br>
+            <article>
+                <label for="emptyFilterWeight">Weight of Empty Filter Paper (mg):</label>
+                <input type="number" id="emptyFilterWeight" step="0.01" required>
+            </article>
 
+            <article>
+                <label for="driedFilterWeight">Weight of Filter Paper after Drying (mg):</label>
+                <input type="number" id="driedFilterWeight" step="0.01" required>
+            </article>
 
-            <label for="driedFilterWeight">Weight of Filter Paper after Drying (mg):</label>
-            <input type="number" id="driedFilterWeight" step="0.01" required><br><br>
-
-
-            <label for="sampleVolume">Volume of Sample Used (mL):</label>
-            <input type="number" id="sampleVolume" required><br><br>
+            <article>
+                <label for="sampleVolume">Volume of Sample Used (mL):</label>
+                <input type="number" id="sampleVolume" required>
+            </article>
 
 
             <button type="button" onclick="calculateTSS()">Calculate TSS</button><br><br>
 
-
-            <div id="result"></div>
+            <article>
+                <div class="result" id="result"></div>
+            </article>
         </form>
-    </div>
+    </main>
 
 
     <script>
@@ -60,4 +62,5 @@
         }
     </script>
 </body>
+
 </html>
