--- a/Trickling-filter.html
+++ b/Trickling-filter.html
@@ -1,112 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trickling Filter Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Trickling Filter</h1>
+    <header>Trickling Filter</header>
+    <main class="container">
 
 
         <!-- Calculation 1: Volume of Trickling Filter -->
         <h2>Volume of Trickling Filter</h2>
         <form id="volumeCalculationForm">
-            <label for="diameter">Diameter of Trickling Filter (m):</label>
-            <input type="number" id="diameter" step="0.01" required><br><br>
+            <article>
+                <label for="diameter">Diameter of Trickling Filter (m):</label>
+                <input type="number" id="diameter" step="0.01" required>
+            </article>
 
-
-            <label for="depth">Depth of Trickling Filter (m):</label>
-            <input type="number" id="depth" step="0.01" required><br><br>
+            <article>
+                <label for="depth">Depth of Trickling Filter (m):</label>
+                <input type="number" id="depth" step="0.01" required>
+            </article>
 
 
             <button type="button" onclick="calculateVolume()">Calculate Volume</button><br><br>
 
-
-            <div id="volumeResult"></div>
+            <article>
+                <div class="result" id="volumeResult"></div>
+            </article>
         </form>
 
 
         <!-- Calculation 2: BOD Loading Rate -->
         <h2>BOD Loading Rate</h2>
         <form id="bodLoadingRateForm">
-            <label for="influentFlowBOD">Influent Flow (Q, m³/d):</label>
-            <input type="number" id="influentFlowBOD" step="0.01" required><br><br>
+            <article>
+                <label for="influentFlowBOD">Influent Flow (Q, m³/d):</label>
+                <input type="number" id="influentFlowBOD" step="0.01" required>
+            </article>
 
+            <article>
+                <label for="influentBOD">Influent BODs Concentration (So, g/m³):</label>
+                <input type="number" id="influentBOD" step="0.01" required>
+            </article>
 
-            <label for="influentBOD">Influent BODs Concentration (So, g/m³):</label>
-            <input type="number" id="influentBOD" step="0.01" required><br><br>
-
-
-            <label for="volumeBOD">Volume of Trickling Filter (V, m³):</label>
-            <input type="number" id="volumeBOD" step="0.01" required><br><br>
+            <article>
+                <label for="volumeBOD">Volume of Trickling Filter (V, m³):</label>
+                <input type="number" id="volumeBOD" step="0.01" required>
+            </article>
 
 
             <button type="button" onclick="calculateBODLoadingRate()">Calculate BOD Loading Rate</button><br><br>
 
-
-            <div id="bodLoadingRateResult"></div>
+            <article>
+                <div class="result" id="bodLoadingRateResult"></div>
+            </article>
         </form>
 
 
         <!-- Calculation 3: TKN Loading Rate -->
         <h2>TKN Loading Rate</h2>
         <form id="tknLoadingRateForm">
-            <label for="influentFlowTKN">Influent Flow (Q, m³/d):</label>
-            <input type="number" id="influentFlowTKN" step="0.01" required><br><br>
+            <article>
+                <label for="influentFlowTKN">Influent Flow (Q, m³/d):</label>
+                <input type="number" id="influentFlowTKN" step="0.01" required>
+            </article>
 
+            <article>
+                <label for="tknValue">Primary Effluent TKN Value (Kg/m³):</label>
+                <input type="number" id="tknValue" step="0.01" required>
+            </article>
 
-            <label for="tknValue">Primary Effluent TKN Value (Kg/m³):</label>
-            <input type="number" id="tknValue" step="0.01" required><br><br>
-
-
-            <label for="volumeTKN">Volume of Trickling Filter (V, m³):</label>
-            <input type="number" id="volumeTKN" step="0.01" required><br><br>
+            <article>
+                <label for="volumeTKN">Volume of Trickling Filter (V, m³):</label>
+                <input type="number" id="volumeTKN" step="0.01" required>
+            </article>
 
 
             <button type="button" onclick="calculateTKNLoadingRate()">Calculate TKN Loading Rate</button><br><br>
 
-
-            <div id="tknLoadingRateResult"></div>
+            <article>
+                <div class="result" id="tknLoadingRateResult"></div>
+            </article>
         </form>
 
 
         <!-- Calculation 4: Specific TKN Loading -->
         <h2>Specific TKN Loading</h2>
         <form id="specificTKNLoadingForm">
-            <label for="influentFlowSpecific">Influent Flow (Q, m³/d):</label>
-            <input type="number" id="influentFlowSpecific" step="0.01" required><br><br>
+            <article>
+                <label for="influentFlowSpecific">Influent Flow (Q, m³/d):</label>
+                <input type="number" id="influentFlowSpecific" step="0.01" required>
+            </article>
+
+            <article>
+                <label for="tknValueSpecific">Primary Effluent TKN Value (Kg/m³):</label>
+                <input type="number" id="tknValueSpecific" step="0.01" required>
+            </article>
+
+            <article>
+                <label for="volumeSpecific">Volume of Trickling Filter (V, m³):</label>
+                <input type="number" id="volumeSpecific" step="0.01" required>
+            </article>
+
+            <article>
+                <label for="surfaceArea">Specific Surface Area of the Packing (m²/m³):</label>
+                <input type="number" id="surfaceArea" step="0.01" required>
+            </article>
 
 
-            <label for="tknValueSpecific">Primary Effluent TKN Value (Kg/m³):</label>
-            <input type="number" id="tknValueSpecific" step="0.01" required><br><br>
+            <button type="button" onclick="calculateSpecificTKNLoading()">Calculate Specific TKN
+                Loading</button><br><br>
 
-
-            <label for="volumeSpecific">Volume of Trickling Filter (V, m³):</label>
-            <input type="number" id="volumeSpecific" step="0.01" required><br><br>
-
-
-            <label for="surfaceArea">Specific Surface Area of the Packing (m²/m³):</label>
-            <input type="number" id="surfaceArea" step="0.01" required><br><br>
-
-
-            <button type="button" onclick="calculateSpecificTKNLoading()">Calculate Specific TKN Loading</button><br><br>
-
-
-            <div id="specificTKNLoadingResult"></div>
+            <article>
+                <div class="result" id="specificTKNLoadingResult"></div>
+            </article>
         </form>
-    </div>
+    </main>
 
 
     <script>
@@ -194,4 +212,5 @@
         }
     </script>
 </body>
+
 </html>
