--- a/Volume-of-reactor.html
+++ b/Volume-of-reactor.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volume of Reactor (V) Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Volume of Reactor (V) Calculator</h1>
+    <header>Volume of Reactor (V) Calculator</header>
+    <main class="container">
         <form id="reactorVolumeForm">
-            <label for="influentFlow">Influent Flow (Q, m³/d):</label>
-            <input type="number" id="influentFlow" step="0.01" required><br><br>
+            <article>
+                <label for="influentFlow">Influent Flow (Q, m³/d):</label>
+                <input type="number" id="influentFlow" step="0.01" required>
+            </article>
 
+            <article>
+                <label for="influentBODs">Influent BODs Concentration (So, g/m³):</label>
+                <input type="number" id="influentBODs" step="0.01" required>
+            </article>
 
-            <label for="influentBODs">Influent BODs Concentration (So, g/m³):</label>
-            <input type="number" id="influentBODs" step="0.01" required><br><br>
+            <article>
+                <label for="solubleEffluentBOD">Soluble Effluent BOD Concentration (S, g/m³):</label>
+                <input type="number" id="solubleEffluentBOD" step="0.01" required>
+            </article>
 
+            <article>
+                <label for="substrateUtilization">Substrate Utilisation Rate (U, d⁻¹ or KgBOD₅ / KgVSS.d):</label>
+                <input type="number" id="substrateUtilization" step="0.01" required>
+            </article>
 
-            <label for="solubleEffluentBOD">Soluble Effluent BOD Concentration (S, g/m³):</label>
-            <input type="number" id="solubleEffluentBOD" step="0.01" required><br><br>
-
-
-            <label for="substrateUtilization">Substrate Utilisation Rate (U, d⁻¹ or KgBOD₅ / KgVSS.d):</label>
-            <input type="number" id="substrateUtilization" step="0.01" required><br><br>
-
-
-            <label for="volatileSuspendedSolids">Volatile Suspended Solids Concentration (Xv, g/m³):</label>
-            <input type="number" id="volatileSuspendedSolids" step="0.01" required><br><br>
+            <article>
+                <label for="volatileSuspendedSolids">Volatile Suspended Solids Concentration (Xv, g/m³):</label>
+                <input type="number" id="volatileSuspendedSolids" step="0.01" required>
+            </article>
 
 
             <button type="button" onclick="calculateReactorVolume()">Calculate Volume of Reactor (V)</button><br><br>
 
-
-            <div id="result"></div>
+            <article>
+                <div class="result" id="result"></div>
+            </article>
         </form>
-    </div>
+    </main>
 
 
     <script>
@@ -70,4 +74,5 @@
         }
     </script>
 </body>
+
 </html>
