name-of-website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waste Water Engineering</title>
+    <title>Waste Water Wizard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&family=Roboto:wght@500&display=swap"
@@ -70,7 +70,7 @@
 
 <body>
     <header>
-        WASTE WATER ENGINEERING
+        WASTE WATER WIZARD
     </header>
     <main>
 
